# automated-email-screenshot-server

./: Cargo.toml
src/: app_result.rs  eml_task.rs  graceful_shutdown.rs  logging.rs  main.rs  worker_thread.rs
src/worker_thread/: viewport_scroller.rs
